// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Charts: Area chart renders correctly 1`] = `
<svg
  aria-hidden={true}
  className="chart"
  viewBox="0 0 200 200"
>
  <g
    transform="translate(30 30)"
  >
    <g>
      <text
        className="label xTickLabel"
        x={0}
        y={170}
      >
        0
      </text>
      <line
        className="gridLine"
        x1={0}
        x2={0}
        y1={0}
        y2={140}
      />
    </g>
    <g>
      <text
        className="label xTickLabel"
        x={76.92307692307693}
        y={170}
      >
        500
      </text>
      <line
        className="gridLine"
        x1={76.92307692307693}
        x2={76.92307692307693}
        y1={0}
        y2={140}
      />
    </g>
    <g>
      <text
        className="label xTickLabel"
        x={153.84615384615387}
        y={170}
      >
        1k
      </text>
      <line
        className="gridLine"
        x1={153.84615384615387}
        x2={153.84615384615387}
        y1={0}
        y2={140}
      />
    </g>
  </g>
  <g
    transform="translate(0, 30)"
  >
    <svg
      className="yTickLabel"
      x={20}
      y={26.66666666666668}
    >
      <text
        className="label"
      >
        A1
      </text>
    </svg>
    <svg
      className="yTickLabel"
      x={20}
      y={60.00000000000001}
    >
      <text
        className="label"
      >
        A2
      </text>
    </svg>
    <svg
      className="yTickLabel"
      x={20}
      y={93.33333333333334}
    >
      <text
        className="label"
      >
        B1
      </text>
    </svg>
    <svg
      className="yTickLabel"
      x={20}
      y={126.66666666666666}
    >
      <text
        className="label"
      >
        B2
      </text>
    </svg>
  </g>
  <g
    transform="translate(30, 30)"
  >
    <rect
      fill="#333"
      height={26.666666666666664}
      width={189.84615384615384}
      x={0}
      y={6.6666666666666785}
    />
    <rect
      fill="#333"
      height={26.666666666666664}
      width={18.923076923076923}
      x={0}
      y={40.00000000000001}
    />
    <rect
      fill="#333"
      height={26.666666666666664}
      width={189.69230769230768}
      x={0}
      y={73.33333333333334}
    />
    <rect
      fill="#333"
      height={26.666666666666664}
      width={20.307692307692307}
      x={0}
      y={106.66666666666666}
    />
  </g>
</svg>
`;

exports[`Components : Charts: Area chart renders correctly 2`] = `
<svg
  aria-hidden={true}
  className="chart"
  viewBox="0 0 200 200"
>
  <g
    transform="translate(0 0)"
  >
    <g>
      <text
        className="label xTickLabel"
        x={0}
        y={200}
      >
        0
      </text>
      <line
        className="gridLine"
        x1={0}
        x2={0}
        y1={0}
        y2={200}
      />
    </g>
    <g>
      <text
        className="label xTickLabel"
        x={76.92307692307693}
        y={200}
      >
        500
      </text>
      <line
        className="gridLine"
        x1={76.92307692307693}
        x2={76.92307692307693}
        y1={0}
        y2={200}
      />
    </g>
    <g>
      <text
        className="label xTickLabel"
        x={153.84615384615387}
        y={200}
      >
        1k
      </text>
      <line
        className="gridLine"
        x1={153.84615384615387}
        x2={153.84615384615387}
        y1={0}
        y2={200}
      />
    </g>
  </g>
  <g
    transform="translate(0, 0)"
  >
    <svg
      className="yTickLabel"
      x={-10}
      y={29.52380952380952}
    >
      <text
        className="label"
      >
        A1
      </text>
    </svg>
    <svg
      className="yTickLabel"
      x={-10}
      y={77.14285714285714}
    >
      <text
        className="label"
      >
        A2
      </text>
    </svg>
    <svg
      className="yTickLabel"
      x={-10}
      y={124.76190476190476}
    >
      <text
        className="label"
      >
        B1
      </text>
    </svg>
    <svg
      className="yTickLabel"
      x={-10}
      y={172.38095238095238}
    >
      <text
        className="label"
      >
        B2
      </text>
    </svg>
  </g>
  <g
    transform="translate(0, 0)"
  >
    <rect
      fill="#333"
      height={38.095238095238095}
      width={189.84615384615384}
      x={0}
      y={9.523809523809518}
    />
    <rect
      fill="#333"
      height={38.095238095238095}
      width={18.923076923076923}
      x={0}
      y={57.14285714285714}
    />
    <rect
      fill="#333"
      height={38.095238095238095}
      width={189.69230769230768}
      x={0}
      y={104.76190476190476}
    />
    <rect
      fill="#333"
      height={38.095238095238095}
      width={20.307692307692307}
      x={0}
      y={152.38095238095238}
    />
  </g>
</svg>
`;
